[add] add proxy module